# crypto-api-toolkit

./: .gitignore  LICENSE.md  Makefile.am  NEWS.md  README.md  autogen.sh  configure.ac
src/: Makefile.am
src/dep_check/sgxssl/: check_openssl_version.sh  prepare_sgxssl.sh
src/dep_check/sgxssl/OSSLVersionEnclave/: Makefile
src/dep_check/sgxssl/OSSLVersionEnclave/App/: OSSLVersion.cpp
src/dep_check/sgxssl/OSSLVersionEnclave/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl
src/p11/: Makefile.am
src/p11/enclave_config/: p11Enclave.config.xml  p11Enclave.edl  p11Enclave_private.pem
src/p11/include/: Constants.h  CryptoEnclaveDefs.h  p11Defines.h  pkcs11f.h  pkcs11t.h
src/p11/trusted/: AsymmetricCrypto.cpp  AsymmetricCrypto.h  AsymmetricKeyCache.cpp  AsymmetricKeyCache.h  ByteBuffer.cpp  ByteBuffer.h  CryptParams.h  EVPContextHandle.cpp  EVPContextHandle.h  EVPCtxStateCache.cpp  EVPCtxStateCache.h  EVPDecrypt.cpp  EVPDecrypt.h  EVPEncrypt.cpp  EVPEncrypt.h  HashCrypto.cpp  HashCrypto.h  HashDefs.h  HashStateCache.cpp  HashStateCache.h  IppContextHandle.cpp  IppContextHandle.h  IppDecrypt.cpp  IppDecrypt.h  IppEncrypt.cpp  IppEncrypt.h  IppHash.cpp  IppHash.h  IppStateCache.cpp  IppStateCache.h  Makefile.am  SgxFileUtils.cpp  SgxFileUtils.h  SoPinCache.cpp  SoPinCache.h  SymmetricCrypto.cpp  SymmetricCrypto.h  SymmetricKeyCache.cpp  SymmetricKeyCache.h  TokenObjectParser.cpp  (+3 more)
src/p11/trusted/SoftHSMv2/: EnclaveSecureUtils.cpp  EnclaveSecureUtils.h  Makefile.am  P11Attributes.cpp  P11Attributes.h  P11Objects.cpp  P11Objects.h  SoftHSM.cpp  SoftHSM.h  access.cpp  main.cpp  main.h
src/p11/trusted/SoftHSMv2/common/: Configuration.cpp  Configuration.h  HandleFactory.h  Makefile.am  MutexFactory.cpp  MutexFactory.h  QuoteGeneration.h  QuoteGenerationDefs.h  SimpleConfigLoader.cpp  fatal.cpp  fatal.h  libp11sgx.h  osmutex.cpp
src/p11/trusted/SoftHSMv2/crypto/: AsymmetricAlgorithm.cpp  AsymmetricAlgorithm.h  AsymmetricKeyPair.cpp  AsymmetricKeyPair.h  AsymmetricParameters.h  CryptoFactory.cpp  DESKey.cpp  DHParameters.cpp  DHPrivateKey.cpp  DHPublicKey.cpp  DSAParameters.cpp  DSAPrivateKey.cpp  DSAPublicKey.cpp  DerUtil.cpp  ECParameters.cpp  ECPrivateKey.cpp  ECPublicKey.cpp  EDPrivateKey.cpp  EDPublicKey.cpp  GOSTPrivateKey.cpp  GOSTPublicKey.cpp  Makefile.am  OSSLAES.cpp  OSSLCMAC.cpp  OSSLCryptoFactory.cpp  OSSLCryptoFactory.h  OSSLDES.cpp  OSSLDH.cpp  OSSLDHKeyPair.cpp  OSSLDHPrivateKey.cpp  OSSLDHPublicKey.cpp  OSSLDSA.cpp  OSSLDSA.h  OSSLDSAKeyPair.cpp  OSSLDSAPrivateKey.cpp  OSSLDSAPublicKey.cpp  OSSLECDH.cpp  OSSLECDSA.cpp  OSSLECDSA.h  OSSLECKeyPair.cpp  (+38 more)
src/p11/trusted/SoftHSMv2/data_mgr/: ByteString.cpp  ByteString.h  CMakeLists.txt  Makefile.am  RFC4880.cpp  RFC4880.h  SecureAllocator.h  SecureDataManager.cpp  SecureDataManager.h  SecureMemoryRegistry.cpp  SecureMemoryRegistry.h
src/p11/trusted/SoftHSMv2/handle_mgr/: HandleManager.cpp  HandleManager.h  Makefile.am
src/p11/trusted/SoftHSMv2/object_store/: Directory.cpp  Directory.h  File.cpp  File.h  Generation.cpp  Generation.h  Makefile.am  OSAttribute.cpp  OSAttribute.h  OSAttributes.h  OSPathSep.h  OSToken.cpp  OSToken.h  ObjectFile.cpp  ObjectFile.h  ObjectStore.cpp  ObjectStore.h  ObjectStoreToken.cpp  SessionObject.cpp  SessionObject.h  SessionObjectStore.cpp  SessionObjectStore.h  UUID.cpp
src/p11/trusted/SoftHSMv2/pkcs11/: cryptoki.h  pkcs11t.h
src/p11/trusted/SoftHSMv2/session_mgr/: Makefile.am  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
src/p11/trusted/SoftHSMv2/slot_mgr/: Makefile.am  Slot.cpp  Slot.h  SlotManager.cpp  SlotManager.h  Token.cpp  Token.h
src/p11/untrusted/: AsymmetricKeyHandleCache.cpp  AsymmetricKeyHandleCache.h  AsymmetricProvider.cpp  AsymmetricProvider.h  AttributeCache.cpp  AttributeCache.h  AttributeHelpers.cpp  AttributeHelpers.h  AttributeUtils.cpp  AttributeUtils.h  Decryption.cpp  Decryption.h  Digest.cpp  Digest.h  Directory.cpp  Directory.h  DualFunctionCryptoFunctions.cpp  DualFunctionCryptoFunctions.h  EnclaveHelpers.cpp  EnclaveHelpers.h  EnclaveInterface.cpp  EnclaveInterface.h  EnclaveUtils.cpp  EnclaveUtils.h  Encryption.cpp  Encryption.h  FileUtils.cpp  FileUtils.h  GPFunctions.cpp  GPFunctions.h  HashHandleCache.cpp  HashHandleCache.h  HashProvider.cpp  HashProvider.h  KeyManagement.cpp  KeyManagement.h  Makefile.am  ObjectCache.cpp  ObjectCache.h  ObjectManagement.cpp  (+40 more)
src/p11Sample/: Makefile.am  p11SgxSample.cpp
src/test/: AsymEncryptDecryptTests.cpp  AsymEncryptDecryptTests.h  AsymWrapUnwrapTests.cpp  AsymWrapUnwrapTests.h  DigestTests.cpp  DigestTests.h  InfoTests.cpp  InfoTests.h  InitTests.cpp  Makefile.am  ObjectTests.cpp  ObjectTests.h  RandomTests.cpp  RandomTests.h  SignVerifyTests.cpp  SignVerifyTests.h  SymmetricAlgorithmTests.cpp  SymmetricAlgorithmTests.h  UnsupportedAPITests.cpp  UnsupportedAPITests.h  UnwrapKeyHelper.cpp  UnwrapKeyHelper.h  p11test.cpp  softhsm2-alt.conf  softhsm2-mech.conf  softhsm2.conf
src/test/tokens/2b371574-9ba7-f72c-12e4-fb4f8b69a8e/: generation  token.object
